# LWCountdown

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  main.cpp  time_functions.hpp  timer_helpers.hpp
docs/: README.md  cmake_basics.mediawiki  usage.md  usage_examples.md
docs/images/: vega.json
src/: LWFormatter.hpp  main.cpp  timer_helpers.hpp
